Minified logo font

--- a/common.css
+++ b/common.css
@@ -15,7 +15,7 @@ div.wrapper {
 /* HEADER */
 @font-face {
     font-family: "Alte Schwabacher";
-    src: url("alte-schwabacher.demibold.ttf") format("truetype");
+    src: url("alte-schwabacher-demibold-minified.ttf") format("truetype");
 }
 header {
     border-bottom: 1px solid lightblue;
